//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique]
  password String
  emailVerified DateTime
  image String
  firstName String
  isActive Boolean [not null, default: true]
  lastName String
  role Role [not null, default: 'NEW_STUDENT']
  sex String
  accounts accounts [not null]
  ActivationToken activation_tokens [not null]
  applications applications [not null]
  Session sessions [not null]
  friendList String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  favorites String[] [not null]
  notifications notifications [not null]
  posts posts [not null]
  comments comments [not null]
  likes likes [not null]
}

Table posts {
  id String [pk]
  title String [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  authorId String [not null]
  author users [not null]
  comments comments [not null]
  likes likes [not null]
}

Table comments {
  id String [pk]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  postId String [not null]
  post posts [not null]
  authorId String [not null]
  author users [not null]
}

Table likes {
  id String [pk]
  postId String [not null]
  authorId String [not null]
  post posts [not null]
  author users [not null]

  indexes {
    (postId, authorId) [unique]
  }
}

Table notifications {
  id String [pk]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  readAt DateTime
  status NotificationStatus [not null, default: 'UNREAD']
  userId String [not null]
  user users [not null]
}

Table activation_tokens {
  id String [pk]
  token String [unique, not null]
  activatedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  user users [not null]
}

Table accounts {
  id String [pk]
  userId String [not null]
  type String
  provider String [not null]
  providerAccountId String [not null]
  token_type String
  refresh_token String
  access_token String
  expires_at Int
  scope String
  id_token String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  user users [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table sessions {
  id String [pk]
  userId String
  sessionToken String [unique, not null]
  accessToken String
  expires DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users
}

Table universities {
  id String [pk]
  name String [not null]
  location String [not null]
  studyPrograms study_programs [not null]
}

Table study_programs {
  id String [pk]
  name String [not null]
  description String [not null]
  startDate String
  degreeType String [not null]
  attendance String [not null]
  paymentCycle String [not null]
  studyProgramLink String
  universityId String [not null]
  tuitionFee Int
  IELTSScore Float
  TOEFLScore Int
  duration Float
  applyDate String
  studyProgramLanguage studyProgramLanguage [not null, default: 'EN']
  format String[] [not null]
  applications applications [not null]
  discipline disciplines_on_programs [not null]
  university universities [not null]
}

Table disciplines {
  id String [pk]
  name String [not null]
  disciplineOnProgram disciplines_on_programs [not null]
}

Table disciplines_on_programs {
  disciplineId String [not null]
  studyProgramId String [not null]
  discipline disciplines [not null]
  studyProgram study_programs [not null]

  indexes {
    (disciplineId, studyProgramId) [pk]
  }
}

Table applications {
  id String [pk]
  studyProgramId String [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  userConsent Boolean [not null, default: false]
  status applicationStatus [not null, default: 'pending']
  studyProgram study_programs [not null]
  user users [not null]
  documents documents [not null]
  personalInfo personal_infos
  educationalBackground educational_backgrounds

  indexes {
    (studyProgramId, userId) [unique]
  }
}

Table documents {
  id String [pk]
  link String
  applicationId String [not null]
  application applications [not null]
}

Table personal_infos {
  nativeLanguage String [not null]
  languageProficiency EnglishLevel [not null]
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  email String [not null]
  phoneNumber String
  dateOfBirth DateTime [not null]
  nationality String [not null]
  applicationId String [unique, not null]
  application applications [not null]
}

Table educational_backgrounds {
  id String [pk]
  applicationId String [unique, not null]
  highestQualification highestQualification [not null]
  institutionName String [not null]
  graduationYear Int [not null]
  application applications [not null]
}

Enum NotificationStatus {
  READ
  UNREAD
}

Enum EnglishLevel {
  A1
  A2
  B1
  B2
  C1
  C2
}

Enum highestQualification {
  HighSchool
  Bachelor
  Master
  PhD
}

Enum Role {
  NEW_STUDENT
  ACCEPTED_STUDENT
  COMMUNITY_ANGEL
  ADMIN
}

Enum studyProgramLanguage {
  EN
  PL
}

Enum searchQueryParamKeys {
  TuitionFees
  Duration
  Discipline
  Format
  Attendance
  Degree
}

Enum applicationStatus {
  pending
  accepted
  rejected
}

Ref: posts.authorId > users.id [delete: Cascade]

Ref: comments.postId > posts.id [delete: Cascade]

Ref: comments.authorId > users.id

Ref: likes.postId > posts.id [delete: Cascade]

Ref: likes.authorId > users.id

Ref: notifications.userId > users.id

Ref: activation_tokens.userId > users.id

Ref: accounts.userId > users.id [delete: Cascade]

Ref: sessions.userId > users.id [delete: Cascade]

Ref: study_programs.universityId > universities.id [delete: Cascade]

Ref: disciplines_on_programs.disciplineId > disciplines.id [delete: Cascade]

Ref: disciplines_on_programs.studyProgramId > study_programs.id [delete: Cascade]

Ref: applications.studyProgramId > study_programs.id [delete: Cascade]

Ref: applications.userId > users.id [delete: Cascade]

Ref: documents.applicationId > applications.id [delete: Cascade]

Ref: personal_infos.applicationId - applications.id [delete: Cascade]

Ref: educational_backgrounds.applicationId - applications.id [delete: Cascade]